# cf-ddns

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: release.yml
src/: config.rs  ddns.rs  ip.rs  main.rs
