[package]
name = "cf-ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
get_if_addrs = "0.5"
lmrc-cloudflare = "0.3"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
